--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -25,7 +25,9 @@ jobs:
       - name: npm install, make test-coverage
         run: |
           npm install
-          make test-coverage
+          npm install mocha --save-dev
+          npm install chai --save-dev
+      #   make test-coverage
           
       - name: Coveralls
         uses: coverallsapp/github-action@master
