--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -17,16 +17,19 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
           
-      - name: Use Node.js 10.x
-        uses: actions/setup-node@v1
+      - name: Use Node.js 16.x
+        uses: actions/setup-node@v3
         with:
-          node-version: 10.x
+          node-version: 16.x
+          cache: 'npm'
           
       - name: npm install, make test-coverage
         run: |
           npm install
           npm install mocha --save-dev
           npm install chai --save-dev
+          npm ci
+          npm test
       #   make test-coverage
           
       - name: Coveralls
