--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -1,38 +1,27 @@
-# This is a basic workflow to help you get started with Actions
+name: Node.js CI
 
-name: CI
+on:
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
 
-# Controls when the workflow will run
-on: ["push", "pull_request"]
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
+
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
+    strategy:
+      matrix:
+        node-version: [14.x, 15.x, 16.X]
+
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
-          
-      - name: Use Node.js 16.x
+      - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
-          node-version: 16.x
-          cache: 'npm'
-          
-      - name: npm install, make test-coverage
-        run: |
-          npm install
-          npm install mocha --save-dev
-          npm install chai --save-dev
-          npm ci
-          npm test
-      #   make test-coverage
-          
-      - name: Coveralls
-        uses: coverallsapp/github-action@master
-        with: 
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+          node-version: ${{ matrix.node-version }}
+      - run: npm ci
+      - run: npm run build --if-present
+      - run: npm test
+
