--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -24,10 +24,9 @@ jobs:
       - run: npm ci
       - run: npm run build --if-present
       - run: npm test
-      - run: npm install c8 --save-dev
-      - run: npm run test-coverage
+      - run: make test-coverage
 
-      - name: Coveralls
-        uses: coverallsapp/github-action@master
-        with: 
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+    - name: Coveralls
+      uses: coverallsapp/github-action@master
+      with:
+        github-token: ${{ secrets.GITHUB_TOKEN }}
