--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -24,6 +24,8 @@ jobs:
       - run: npm ci
       - run: npm run build --if-present
       - run: npm install c8 --save-dev
+      - run: npm install coveralls --save-dev
+      - run: npm install mocha-lcov-reporter --save-dev
       - run: npm run coverage
 
       - name: Coveralls
