--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -26,6 +26,7 @@ jobs:
       - run: npm install c8 --save-dev
       - run: npm install coveralls --save-dev
       - run: npm install mocha-lcov-reporter --save-dev
+      - run: cat ./coverage/tmp/coverage-528-1670576467700-0.json | ./node_modules/coveralls/bin/coveralls.js
       - run: npm run coverage
 
       - name: Coveralls
