--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -27,6 +27,7 @@ jobs:
       - run: npm install coveralls --save-dev
       - run: npm install mocha-lcov-reporter --save-dev
       - run: npm run coverage
+      - run: npm run coverage-report
 
       - name: Coveralls
         uses: coverallsapp/github-action@master
