--- a/package.json
+++ b/package.json
@@ -6,12 +6,16 @@
   "type": "module",
   "scripts": {
     "test": "mocha",
-    "coverage": "c8 mocha"
+    "coverage": "c8 mocha",
+    "coverage-report":  "c8 report --reporter=lcov"
   },
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "c8": "^7.12.0",
     "chai": "^4.3.7",
-    "mocha": "^10.1.0"
+    "coveralls": "^3.1.1",
+    "mocha": "^10.1.0",
+    "mocha-lcov-reporter": "^1.3.0"
   }
 }
